# dailytext

./: README.md  main.py  pyproject.toml  test.html  test.py
