[tool.poetry]
name = "repl_python3_dailytext-1"
version = "0.1.0"
description = ""
authors = ["mrashleyball <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
pytz = "^2022.1"
discord = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
